<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.lsp4mp</groupId>
	<artifactId>org.eclipse.lsp4mp.ls</artifactId>
	<version>0.2.0-SNAPSHOT</version>

	<name>MicroProfile Language Server</name>
	<description>MicroProfile Language Server</description>
	<url>https://github.com/redhat-developer/quarkus-ls</url>
	<licenses>
		<license>
			<name>EPL-2.0</name>
			<url>https://www.eclipse.org/legal/epl-2.0/</url>
			<comments>Eclipse Public License 2.0</comments>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:git@github.com:eclipse/lsp4mp.git</connection>
		<developerConnection>scm:git:git@github.com:eclipse/lsp4mp.git</developerConnection>
		<url>https://github.com/eclipse/lsp4mp</url>
		<tag>${project.version}</tag>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
		<dev.build.timestamp>${maven.build.timestamp}</dev.build.timestamp>
		<lsp4j.version>0.9.0</lsp4j.version>
		<releases.repo.id>repo.eclipse.org</releases.repo.id>
		<releases.repo.url>https://repo.eclipse.org/content/repositories/lsp4mp-releases/</releases.repo.url>
		<snapshots.repo.id>repo.eclipse.org</snapshots.repo.id>
		<snapshots.repo.url>https://repo.eclipse.org/content/repositories/lsp4mp-snapshots/</snapshots.repo.url>
	</properties>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources/</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources/</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>parse-version</id>
						<goals>
							<goal>parse-version</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptors combine.children="append">
						<descriptor>src/assembly/distribution.xml</descriptor>
					</descriptors>
					<finalName>${project.artifactId}</finalName>
					<archive>
						<manifest>
							<mainClass>org.eclipse.lsp4mp.ls.MicroProfileServerLauncher</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id> <!-- this is used for inheritance merges -->
						<phase>package</phase> <!-- bind to the packaging phase -->
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j</artifactId>
			<version>${lsp4j.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.errorprone</groupId>
					<artifactId>error_prone_annotations</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>animal-sniffer-annotations</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
			<version>${lsp4j.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<distributionManagement>
 		<repository>
			<id>${releases.repo.id}</id>
			<name>Eclipse Releases Repository</name>
 			<url>${releases.repo.url}</url>
		</repository>
		<snapshotRepository>
			<id>${snapshots.repo.id}</id>
			<name>Eclipse Snapshots Repository</name>
			<url>${snapshots.repo.url}</url>
		</snapshotRepository>
	</distributionManagement>	
</project>
